--- a/mobile/android/websocket/app/build.gradle
+++ b/mobile/android/websocket/app/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     // okhttp
     implementation 'com.squareup.okhttp3:okhttp:4.11.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.11.0'
+    implementation 'com.squareup.okio:okio:3.3.0'
 
     // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -75,4 +76,7 @@ dependencies {
 
     // gson
     implementation 'com.google.code.gson:gson:2.10.1'
+
+    // kotlin multiplatform, serializable
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.2"
 }
