--- a/mobile/android/unittest_restapi_websocket/app/src/main/AndroidManifest.xml
+++ b/mobile/android/unittest_restapi_websocket/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Unittest_restapi_websocket"
+        android:theme="@style/Theme.Unittest"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
