--- a/android/websocket/build.gradle
+++ b/android/websocket/build.gradle
@@ -4,4 +4,5 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
     id 'org.jetbrains.kotlin.multiplatform' version '1.9.21'
     id 'org.jetbrains.kotlin.plugin.serialization' version '1.9.21'
+    id 'com.google.dagger.hilt.android' version '2.48' apply false
 }
